# odb_poly_decomp

./: .gitignore  Cargo.toml  LICENSE  original.cpp
src/: active.rs  colortest.rs  debug.rs  decomposer.rs  edge.rs  edge_scans.rs  edges.rs  geometry.rs  index.rs  lib.rs  main.rs  misc.rs  node.rs  point.rs  rect.rs  scanner.rs
