[package]
name = "odb_poly_decomp"
version = "0.1.0"
edition = "2021"

[lib]
name = "odb_poly_decomp"
path = "src/lib.rs"

[[bin]]
name = "odb_poly_decomp"
path = "src/main.rs"

[[bin]]
name = "colortest"
path = "src/colortest.rs"

[dependencies]
id-arena = "2.2.1"
itertools = "0.11.0"
lazy_static = "1.4.0"
nu-ansi-term = "0.49.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "parking_lot"] }
